--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,30 @@
-@import './base.css';
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-
-  font-weight: normal;
+:root {
+    --page-color : #f4f4f4;
+    --blue-card : #7cb3ff;
+    --blue-card-hr: white;
+    --blue-card-text: white;
+    --text-color: #454545;
+    --card: white;
+    --notice-list-background: #fcfcfc;
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
+@media (prefers-color-scheme: dark) {
+    :root {
+        --page-color: #212121;
+        --blue-card: #005db4;
+        --blue-card-hr: white;
+        --blue-card-text: white;
+        --text-color: white;
+        --card: #363636;
+        --notice-list-background: #4a4a4a;
+    }
 }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: var(--page-color) ;
+    font-family: "Apple SD Gothic Neo", sans-serif;
 }
